fixed /login and /signup discord / normal wrap

--- a/static/style.css
+++ b/static/style.css
@@ -859,6 +859,10 @@ hr {
     opacity: 1;
 }
 
+.flexwrap {
+    flex-wrap: wrap;
+}
+
 .bold {
     font-weight: bold;
 }
